objects/ObjectNov24__c.object
<CustomObject>
    <fields>
        <fullName>ObjectNov24_Date_Time__c</fullName>
        <label>ObjectNov24 Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ObjectNov24_Number__c</fullName>
        <label>ObjectNov24 Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectNov24_Text__c</fullName>
        <label>ObjectNov24 Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectNov24_URL__c</fullName>
        <label>ObjectNov24 URL</label>
        <type>Url</type>
    </fields>
    <label>ObjectNov24</label>
    <nameField>
        <label>CustomObjectNov24 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectNov24s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>